@@ -1,3 +1,6 @@
+2016-05-26 0.8.1 alpha
+Keyboard for 2D visualization.
+
 2016-05-25 0.8.1 alpha
 Horizontal 2D visualization.
 
